BillReminder 0.3.2
==================

 Bugs:
  * Ambiguity with Alerts and Alarms in preferences dialog
   ref  http://code.google.com/p/billreminder/issues/detail?id=11
  * Make category names a unique field.
   ref: http://code.google.com/p/billreminder/issues/detail?id=1
  * Newly added categories should be selected automatically
   ref: http://code.google.com/p/billreminder/issues/detail?id=2
  * Make setting an alarm really optional.
   ref: http://code.google.com/p/billreminder/issues/detail?id=4

 Backend:
  * Changed BillReminder to use GConf for is configuration values.
    Thanks Wilson Pinto Junior <wilsonpjunior@gmail.com>
  * Changed BillReminder's command line parsing to use OptionParser.
   ref: http://code.google.com/p/billreminder/issues/detail?id=3

 Translations:
  New:
  * Croatian translation by Mario Ðani
  * Czech translation by Pavel Šefránek
  * Italian translation by giopas
  * Canadian English translation by Rosetta Contributors and Canonical Ltd
  * Finish translation by Rosetta Contributors and Canonical Ltd
  * Polish translation by Rosetta Contributors and Canonical Ltd
  * European Portuguese translation by Rosetta Contributors and Canonical Ltd
  * Russian translation by Rosetta Contributors and Canonical Ltd
  * Turkish translation by Rosetta Contributors and Canonical Ltd

  Updated:
  * Spanish by Gilberto Miralla
  * Dutch by Daniel van Eeden
  * Brazilian Portuguese by Og Maciel
  * German by Sebastian

 Graphical Interface:
  * Ask user for confirmation before editing an existing category.
  * Added pycairo as a dependency instead of python-Image. Color-coded
  categories now have a border around the colored tile.

BillReminder 0.3.1
==================

 Bugs:
 #1906715 - New records can now be created by double-clicking a date in
  the main calendar. The due date for this new record will be set to the
 date selected upon double-clicking.
 #1908445 - Fixed a bug that would cause recurring bills not to expand