@@ -1,3 +1,7 @@
+2008-07-11 Og Maciel <ogmaciel@gnome.org>
+
+    * maindialog.py: Remove duplicated menu entry and fix event handling
+
 2008-07-10 Og Maciel <ogmaciel@gnome.org>
 
     * adddialog.py: Make use of gconf values
